--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
             <img src="images/Logo.png" alt="Website logo" />
           </div>
           <div class="site-navigation-desktop">
-            <nav class="color-navlink">
+            <nav>
               <ul role="list">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#">Service</a></li>
-                <li><a href="#">Features</a></li>
-                <li><a href="#">Product</a></li>
-                <li><a href="#">Testimonial</a></li>
-                <li><a href="#">FAQ</a></li>
+                <li><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="#" class="nav-link">Service</a></li>
+                <li><a href="#" class="nav-link">Features</a></li>
+                <li><a href="#" class="nav-link">Product</a></li>
+                <li><a href="#" class="nav-link">Testimonial</a></li>
+                <li><a href="#" class="nav-link">FAQ</a></li>
               </ul>
             </nav>
             <div class="auth-links">
@@ -34,27 +34,27 @@
               <a href="#" class="btn">Sign up</a>
             </div>
           </div>
-          <button class="btn" id="menu-btn">Menu</button>
+          <button class="btn btn-toggler" id="menu-btn">Menu</button>
         </div>
 
         <!-- mobile navigation -->
-        <div class="site-navigation-mobile gap-top-400">
-          <nav class="color-navlink">
+        <div class="site-navigation-mobile gap-top-400 flow">
+          <nav>
             <ul role="list">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="#">Service</a></li>
-              <li><a href="#">Features</a></li>
-              <li><a href="#">Product</a></li>
-              <li><a href="#">Testimonial</a></li>
-              <li><a href="#">FAQ</a></li>
+              <li><a href="#" class="nav-link">Home</a></li>
+              <li><a href="#" class="nav-link">Service</a></li>
+              <li><a href="#" class="nav-link">Features</a></li>
+              <li><a href="#" class="nav-link">Product</a></li>
+              <li><a href="#" class="nav-link">Testimonial</a></li>
+              <li><a href="#" class="nav-link">FAQ</a></li>
             </ul>
           </nav>
-          <div class="auth-links">
+          <div class="auth-links flow">
             <div>
-              <a href="#" class="btn">Login</a>
+              <a href="#" class="btn w-full">Login</a>
             </div>
             <div>
-              <a href="#" class="btn">Sign up</a>
+              <a href="#" class="btn w-full">Sign up</a>
             </div>
           </div>
         </div>
@@ -175,7 +175,7 @@
               Etiam quis massa pulvinar, aliquam quam vitae, tempus sem. Donec
               elementum pulvinar odio.
             </p>
-            <a href="#" class="btn">Learn more</a>
+            <a href="#" class="btn"> Learn more </a>
           </div>
           <footer class="footer">
             <!-- media footer optional -->
@@ -305,7 +305,24 @@
                 <li><img src="images/clients/five.png" alt="client5" /></li>
                 <li><img src="images/clients/six.png" alt="client6" /></li>
               </ul>
-              <a href="#" class="inline-block">Meet all customers</a>
+              <a href="#" class="btn">
+                Meet all customers
+                <svg
+                  aria-hidden="true"
+                  width="25"
+                  height="25"
+                  viewBox="0 0 25 25"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M16.5 16.399L19.7929 13.1062C20.1834 12.7156 20.1834 12.0825 19.7929 11.6919L16.5 8.39905M19.5 12.399L5.5 12.399"
+                    stroke="#4CAF4F"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                  />
+                </svg>
+              </a>
             </div>
           </div>
           <footer class="footer"></footer>
@@ -327,11 +344,28 @@
             <article>
               <div>
                 <img src="images/updates/image1.png" alt="Update 1" />
-                <div class="content flow">
+                <div class="content flow text-center">
                   <h4 class="text-400">
                     Creating Streamlined Safeguarding Processes with OneRen
                   </h4>
-                  <a href="#" class="inline-block">Readmore</a>
+                  <a href="#" class="btn">
+                    Readmore
+                    <svg
+                      aria-hidden="true"
+                      width="25"
+                      height="25"
+                      viewBox="0 0 25 25"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M16.5 16.399L19.7929 13.1062C20.1834 12.7156 20.1834 12.0825 19.7929 11.6919L16.5 8.39905M19.5 12.399L5.5 12.399"
+                        stroke="#4CAF4F"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                      />
+                    </svg>
+                  </a>
                 </div>
               </div>
             </article>
@@ -339,12 +373,29 @@
             <article>
               <div>
                 <img src="images/updates/image2.png" alt="Update 2" />
-                <div class="content flow">
+                <div class="content flow text-center">
                   <h4 class="text-400">
                     What are your safeguarding responsibilities and how can you
                     manage them?
                   </h4>
-                  <a href="#" class="inline-block">Readmore</a>
+                  <a href="#" class="btn">
+                    Readmore
+                    <svg
+                      aria-hidden="true"
+                      width="25"
+                      height="25"
+                      viewBox="0 0 25 25"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M16.5 16.399L19.7929 13.1062C20.1834 12.7156 20.1834 12.0825 19.7929 11.6919L16.5 8.39905M19.5 12.399L5.5 12.399"
+                        stroke="#4CAF4F"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                      />
+                    </svg>
+                  </a>
                 </div>
               </div>
             </article>
@@ -352,11 +403,28 @@
             <article>
               <div>
                 <img src="images/updates/image3.png" alt="Update 3" />
-                <div class="content flow">
+                <div class="content flow text-center">
                   <h4 class="text-400">
                     Revamping the Membership Model with Triathlon Australia
                   </h4>
-                  <a href="#" class="inline-block">Readmore</a>
+                  <a href="#" class="btn">
+                    Readmore
+                    <svg
+                      aria-hidden="true"
+                      width="25"
+                      height="25"
+                      viewBox="0 0 25 25"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M16.5 16.399L19.7929 13.1062C20.1834 12.7156 20.1834 12.0825 19.7929 11.6919L16.5 8.39905M19.5 12.399L5.5 12.399"
+                        stroke="#4CAF4F"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                      />
+                    </svg>
+                  </a>
                 </div>
               </div>
             </article>
@@ -371,7 +439,24 @@
             <h1 class="text-700 color-black">
               Pellentesque suscipit fringilla libero eu.
             </h1>
-            <a href="#" class="btn">Get a Demo</a>
+            <a href="#" class="btn">
+              Get a Demo
+              <svg
+                aria-hidden="true"
+                width="25"
+                height="25"
+                viewBox="0 0 25 25"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M16.5 16.399L19.7929 13.1062C20.1834 12.7156 20.1834 12.0825 19.7929 11.6919L16.5 8.39905M19.5 12.399L5.5 12.399"
+                  stroke="#4CAF4F"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                />
+              </svg>
+            </a>
           </div>
         </div>
       </section>
