--- a/index.html
+++ b/index.html
@@ -30,11 +30,23 @@
               </ul>
             </nav>
             <div class="auth-links">
-              <a href="#" class="btn">Login</a>
-              <a href="#" class="btn">Sign up</a>
+              <a href="#" class="btn" data-button-variant="link">Login</a>
+              <a
+                href="#"
+                class="btn"
+                data-button-variant="primary"
+                data-button-size="small"
+                >Sign up</a
+              >
             </div>
           </div>
-          <button class="btn btn-toggler" id="menu-btn">Menu</button>
+          <button
+            class="btn btn-toggler"
+            id="menu-btn"
+            data-button-size="small"
+          >
+            Menu
+          </button>
         </div>
 
         <!-- mobile navigation -->
@@ -51,10 +63,14 @@
           </nav>
           <div class="auth-links flow">
             <div>
-              <a href="#" class="btn w-full">Login</a>
+              <a href="#" class="btn w-full" data-button-variant="link"
+                >Login</a
+              >
             </div>
             <div>
-              <a href="#" class="btn w-full">Sign up</a>
+              <a href="#" class="btn w-full" data-button-variant="primary"
+                >Sign up</a
+              >
             </div>
           </div>
         </div>
@@ -74,7 +90,9 @@
                   Where to grow your business as a photographer: site or social
                   media?
                 </p>
-                <a href="#" class="btn">Register</a>
+                <a href="#" class="btn" data-button-variant="primary"
+                  >Register</a
+                >
               </div>
             </div>
             <div class="img">
@@ -175,7 +193,9 @@
               Etiam quis massa pulvinar, aliquam quam vitae, tempus sem. Donec
               elementum pulvinar odio.
             </p>
-            <a href="#" class="btn"> Learn more </a>
+            <a href="#" class="btn" data-button-variant="primary">
+              Learn more
+            </a>
           </div>
           <footer class="footer">
             <!-- media footer optional -->
@@ -267,7 +287,7 @@
               et nisi ac, hendrerit venenatis libero. Donec consectetur faucibus
               ipsum id gravida.
             </p>
-            <a href="#" class="btn">Learn more</a>
+            <a href="#" class="btn" data-button-variant="primary">Learn more</a>
           </div>
           <footer class="footer"></footer>
         </div>
@@ -305,7 +325,7 @@
                 <li><img src="images/clients/five.png" alt="client5" /></li>
                 <li><img src="images/clients/six.png" alt="client6" /></li>
               </ul>
-              <a href="#" class="btn">
+              <a href="#" class="btn" data-button-variant="link">
                 Meet all customers
                 <svg
                   aria-hidden="true"
@@ -348,8 +368,8 @@
                   <h4 class="text-400">
                     Creating Streamlined Safeguarding Processes with OneRen
                   </h4>
-                  <a href="#" class="btn">
-                    Readmore
+                  <a href="#" class="btn" data-button-variant="link">
+                    Read more
                     <svg
                       aria-hidden="true"
                       width="25"
@@ -378,8 +398,8 @@
                     What are your safeguarding responsibilities and how can you
                     manage them?
                   </h4>
-                  <a href="#" class="btn">
-                    Readmore
+                  <a href="#" class="btn" data-button-variant="link">
+                    Read more
                     <svg
                       aria-hidden="true"
                       width="25"
@@ -407,8 +427,8 @@
                   <h4 class="text-400">
                     Revamping the Membership Model with Triathlon Australia
                   </h4>
-                  <a href="#" class="btn">
-                    Readmore
+                  <a href="#" class="btn" data-button-variant="link">
+                    Read more
                     <svg
                       aria-hidden="true"
                       width="25"
@@ -439,7 +459,7 @@
             <h1 class="text-700 color-black">
               Pellentesque suscipit fringilla libero eu.
             </h1>
-            <a href="#" class="btn">
+            <a href="#" class="btn" data-button-variant="primary">
               Get a Demo
               <svg
                 aria-hidden="true"
@@ -451,7 +471,7 @@
               >
                 <path
                   d="M16.5 16.399L19.7929 13.1062C20.1834 12.7156 20.1834 12.0825 19.7929 11.6919L16.5 8.39905M19.5 12.399L5.5 12.399"
-                  stroke="#4CAF4F"
+                  stroke="#fff"
                   stroke-width="1.5"
                   stroke-linecap="round"
                 />
@@ -517,7 +537,7 @@
         <div class="newsletter flow">
           <h3 class="color-white">Stay up to date</h3>
           <div>
-            <input type="text" placeholder="Your email address" />
+            <input type="text" placeholder="Your email address" class="input" />
           </div>
         </div>
       </div>
